--- a/style.css
+++ b/style.css
@@ -1,8 +1,9 @@
 /*
 Theme Name: WPTB Theme
-Author: Alexis Boyda
+Author: Aleapp
+Author URI: https://aleapp.com
 Description: WPTB Bootstrap Theme
 Template: someparenttheme
-Version: 1.0.0
+Version: 1.0.0.dev
 Text Domain: wptb
 */
