--- a/style.css
+++ b/style.css
@@ -1,9 +1,8 @@
 /*
-Theme Name: WPTB Theme
-Author: Aleapp
+Theme Name: WPTBOOT Theme
+Author: Alexis Boyda
 Author URI: https://aleapp.com
-Description: WPTB Bootstrap Theme
-Template: someparenttheme
-Version: 1.3.dev
-Text Domain: wptb
+Description: WPTBOOT Bootstrap Theme
+Version: 1.4.0
+Text Domain: wptboot
 */
