--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 /*
-Theme Name: WPTBOOT Theme
+Theme Name: WPTB Theme
 Author: Alexis Boyda
 Author URI: https://aleapp.com
-Description: WPTBOOT Bootstrap Theme
+Description: WPTB Bootstrap Theme
 Version: 1.0
-Text Domain: wptboot
+Text Domain: wptb
 */
