--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 /*
-Theme Name: WPTB Theme
+Theme Name: TART Theme
 Author: Alexis Boyda
 Author URI: https://aleapp.com
-Description: WPTB Bootstrap Theme
+Description: TART Bootstrap Theme
 Version: 1.0
-Text Domain: wptb
+Text Domain: tart
 */
